@@ -1,6 +1,8 @@
 package me.cominixo.betterf3.modules;
 
+import java.util.ArrayList;
 import java.util.Collections;
+import java.util.List;
 import me.cominixo.betterf3.utils.DebugLine;
 import me.cominixo.betterf3.utils.Utils;
 import net.minecraft.ChatFormatting;
@@ -45,10 +47,21 @@ public class FpsModule extends BaseModule {
   public final TextColor defaultColorLow = TextColor.fromLegacyFormat(ChatFormatting.RED);
 
   /**
+   * The millisecond times of the first time update sent by the server.
+   */
+  public static long firstTimeUpdate = Long.MAX_VALUE;
+
+  /**
+   * The millisecond times of all time updates sent by the server during the last 30 seconds.
+   */
+  public static final List<Long> lastTimeUpdates = new ArrayList<>();
+
+  /**
    * Instantiates a new FPS module.
    */
   public FpsModule() {
     lines.add(new DebugLine("fps", "format.betterf3.no_format", true));
+    lines.add(new DebugLine("tps", "format.betterf3.no_format", true));
     lines.get(0).inReducedDebug = true;
 
     this.colorHigh = this.defaultColorHigh;
@@ -73,12 +86,32 @@ public class FpsModule extends BaseModule {
           I18n.get("text.betterf3.line.fps.vsync") : "")
       .trim();
 
-    final TextColor color = switch (Utils.fpsColor(currentFps)) {
+    final TextColor fpsColor = switch (Utils.fpsColor(currentFps)) {
       case HIGH -> this.colorHigh;
       case MEDIUM -> this.colorMed;
       case LOW -> this.colorLow;
     };
 
-    lines.get(0).value(Collections.singletonList(Utils.styledText(fpsString, color)));
+    lines.get(0).value(Collections.singletonList(Utils.styledText(fpsString, fpsColor)));
+
+    while (lastTimeUpdates.size() > 2 && System.currentTimeMillis() - lastTimeUpdates.getFirst() > 30000) {
+      lastTimeUpdates.removeFirst();
+    }
+    final int secondsMeasured = (int) Math.max(Math.min(Math.ceil((System.currentTimeMillis() - firstTimeUpdate) / 1000F), 30), 0);
+    final int currentTps = lastTimeUpdates.size() < 2 ? 0 : Math.round(20000F / Math.max(
+      System.currentTimeMillis() - lastTimeUpdates.getLast(),
+      lastTimeUpdates.getLast() - lastTimeUpdates.get(lastTimeUpdates.size() - 2)
+    ));
+    final int recentTps = secondsMeasured == 0 ? 0 : Math.round(20F * lastTimeUpdates.size() / secondsMeasured);
+
+    final String tpsString = I18n.get("format.betterf3.tps", currentTps, recentTps, secondsMeasured).trim();
+
+    final TextColor tpsColor = switch (Utils.tpsColor(currentTps)) {
+      case HIGH -> this.colorHigh;
+      case MEDIUM -> this.colorMed;
+      case LOW -> this.colorLow;
+    };
+
+    lines.get(1).value(Collections.singletonList(Utils.styledText(tpsString, tpsColor)));
   }
 }
